--- a/offline.html
+++ b/offline.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Offline - Luckhouse Games</title>
+    <style>
+        body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background-color: #121212; color: #ffffff; display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center; flex-direction: column; }
+        .container { padding: 20px; }
+        h1 { color: #007bff; margin-bottom: 10px; }
+        p { font-size: 1.1em; margin-bottom: 20px; }
+        a { display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; transition: background-color 0.3s ease; }
+        a:hover { background-color: #0056b3; }
+        .icon { font-size: 3em; margin-bottom: 20px; color: #007bff;}
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="icon">
+            <i class="fas fa-wifi-slash"></i>
+        </div>
+        <h1>Você está Offline</h1>
+        <p>Parece que você não está conectado à internet. Por favor, verifique sua conexão e tente novamente.</p>
+        <p><small>Algumas funcionalidades podem não estar disponíveis.</small></p>
+        <a href="./index.html">Tentar Novamente</a>
+    </div>
+</body>
+</html>
